add debug-log to .gitignore

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "angka-menjadi-terbilang",
-  "version": "0.1.1",
-  "description": "Paket ini akan merubah angka menjadi kata-kata terbilang dalam Bahasa Indonesia
-  Misal, Merubah angka menjadi terbilang, misal 234 menjadi 'dua ratus tiga puluh empat'",
+  "version": "0.1.2",
+  "description": "Paket ini akan merubah angka menjadi kata-kata terbilang dalam Bahasa Indonesia Misal, Merubah angka menjadi terbilang, misal 234 menjadi 'dua ratus tiga puluh empat'",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
